Work starting on Component Manual from release 1.4->1.8 Now need to work on: source simple guide chopper detector monochr powder inelastic
git-svn-id: https://svn.mccode.org/svn/McStasTeX@46 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/abstractpage_comp.tex
+++ b/trunk/abstractpage_comp.tex
@@ -1,11 +1,11 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \begin{abstract}
-\input{abstract}
+\input{abstract_comp}
 \end{abstract}
 
 \vskip\baselineskip\noindent
-This report documents \MCS version \version, released \reldate
+This library component report documents \MCS version \version, released \reldate
 \vskip\baselineskip\noindent
 The authors are:
 \begin{quote}
