--- a/trunk/preface_comp.tex
+++ b/trunk/preface_comp.tex
@@ -47,19 +47,13 @@ contact the authors at \verb+mcstas@risoe.dk+
 or consult the \MCS\ WWW home page~\cite{mcstas_webpage}.
 
 Important developments on the component side in \MCS\ version \version\ 
-as compared to version 1.4 (the last version of the component manual) include
+as compared to version 1.4 (the last version of the component manual) are listed in section~\ref{s:new-features:components}.
 
-\begin{itemize}
-\item I do not know what to say...
-\end{itemize} 
+This project has been supported by the European Union, initially
+through the ``XENNI'' network and ``Cool Neutrons'' RTD program, later
+through the ``SCANS'' network, and today the ``MCNSI`` network package.
 
-The \MCS\ project has been supported by the European Union, initially
-through the XENNI program and the RTD ``Cool Neutrons'' program.
-Over the last 3 years, \MCS\ was supported strongly through the
-``SCANS'' program.
-
-
-
+If you {\bf appreciate} this software, please subscribe to the \verb+neutron-mc@risoe.dk+ email list, send us a smiley message, and contribute to the package.
 
 
 
