--- a/trunk/Component_manual.tex
+++ b/trunk/Component_manual.tex
@@ -11,6 +11,8 @@
 \usepackage[only,egtrm]{rawfonts}
 % Handle sorting in reference list
 \usepackage{citesort}
+% Create an index table
+\usepackage{makeidx}
 
 \newcommand{\smallverbatimfile}[1]{{\footnotesize\verbatimfile{#1}}}
 \newcommand{\component}[4]{\begin{tabular}{|ll|}\hline {\bf Name:} & #1 \\ \hline {\bf Author:} & #2 \\ \hline {\bf Input parameters} & #3 \\ \hline {\bf Optional parameters} & #4 \\ \hline \end{tabular} \\ \noindent }
@@ -41,9 +43,12 @@
 \renewcommand{\footrulewidth}{0pt}}
 
 \newcommand{\MCS}{{McStas}}
-\newcommand{\version}{{1.7}}
+\newcommand{\version}{{1.8}}
 \newcommand{\reldate}{{May 15th, 2003}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
+
+% enable index generation
+\makeindex
 
 %\title{Component manual\\ to the neutron ray-tracing package
 % \MCS ,\\ version \version}
@@ -73,24 +78,20 @@
 
 \include{preface_comp}
 
-\include{intro_comp}
-%\include{running}
-%\include{kernel}
-%\include{techniq}
+\include{intro_comp}  % copied from manual/intro.tex
+\include{changes}     % as in manual (with future)
+
 \include{comp}
-\include{comp_removed}
-\include{instrum}
-%\include{future}
+\include{instr_examples}
 
 \appendix
-\include{kernelcalls}
-%\include{compcode}
+\include{kernelcalls} % as in manual
+%\include{compcode}   % removed: too heavy !!
 %\include{instcode}
-\include{test}
-\include{terms}
+\include{terms}       % as in manual
 
 \addcontentsline{toc}{chapter}{\protect\numberline{}{Bibliography}}
-\bibliography{mcstas}
+\bibliography{mcstas_comp}
 \bibliographystyle{jacs}
 
 %\begin{thebibliography}{99}
@@ -134,6 +135,9 @@
 %\bibitem{importance} Some MC book on importance sampling
 %\bibitem{TAS1paper} Our paper on the TAS1 test results
 %\end{thebibliography}
+
+\addcontentsline{toc}{chapter}{\protect\numberline{}{Index and keywords}}
+\printindex
 \include{datablad_comp}
 
 \end{document}
