--- a/trunk/comp.tex
+++ b/trunk/comp.tex
@@ -1,7 +1,7 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \chapter{About the component library}
-\label{s:components}
+\label{c:components}
 The component library is
 maintained by the \MCS\ system group. A number of basic components 
 ``belongs'' the \MCS\ system, while other are contributed
@@ -23,13 +23,25 @@ Subscripts "i" and "f" denotes ``initial'' and ``final'', respectively,
 and are used in connection with the neutron state before and after
 an interaction with a component.
 Note that all mentioning of component geometry refer to
-the local coordinate system of the individual component.
+the local coordinate system of the individual component, in which the $z$ axis is along propagation axis, the $y$ axis is vertical up, and the $x$ completes the direct coordinate system.
 
-The source code for a few selected components is listed 
-in Appendix~\ref{compcode}. 
 Source code for all component may be found in the \verb+lib/mcstas/+
 subdirectory of the McStas installation; 
-the default is \verb+/usr/local/lib/mcstas/+.
+the default is \verb+/usr/local/lib/mcstas/+ on Unix-like systems and \verb+C:\mcstas\lib+ on Windows systems, but it can be
+changed to something else using the \verb+MCSTAS+ environment variable. \index{Environment variable!MCSTAS}
+
+As a complement to this Component Manual, we encourage users to use
+the \verb+mcdoc+ front-end which enables to display both the 
+catalog of the \MCS\ library, e.g using: \index{Tools!mcdoc}
+\begin{quote}
+  \verb|mcdoc --show|
+\end{quote}
+as well as the documentation of specific components, e.g with:
+\begin{quote}
+  \verb|mcdoc --text| {\it name} \\
+  \verb|mcdoc --show| {\it file.comp}
+\end{quote}
+The first line will search for all components matching the {\it name}, and display their help section as text, whereas the second example will display the help corresponding to the {\it file.comp} component, using your BROWSER\index{Environment variable!BROWSER} setting, or as text if unset. The \verb+--help+ option will display the command help, as usual.
 
 An overview of the component library is also given at the \MCS\ home page...
 
