--- a/trunk/intro_comp.tex
+++ b/trunk/intro_comp.tex
@@ -2,56 +2,56 @@
 
 \chapter{Introduction to \MCS}
 
-(This intro should be identical to the one in the system manual, except
-in the section ``Overview''. Add Per-Olof in Author list?)
-
 Efficient design and optimization of neutron spectrometers are
 formidable challenges. Monte Carlo techniques are well matched to meet
-these challenges. When \MCS\ version 1.0 was released in October 1998, 
-no existing package offered a general framework for the neutron scattering
-community
-to tackle the problems currently faced at reactor and spallation
-sources. The \MCS\ project was designed to provide such a framework.
+these challenges. When \MCS\ version 1.0 was released in October
+1998, except for the NISP/MCLib program~\cite{nisp_webpage}, no existing package offered a general framework for the neutron
+scattering community to tackle the problems currently faced at reactor and
+spallation sources. The \MCS\ project was designed to provide such a framework.
 
 \MCS\ %({\em Monte Carlo Simulations of Triple Axis Spectrometers\/}) 
 is a fast and versatile software tool for neutron ray-tracing simulations.
 It is based on a meta-language specially designed for neutron
 simulation. Specifications are written in this language by users and
 automatically translated into efficient simulation codes in ANSI-C.
-The present version supports both continuous and pulsed source
-instruments, and includes a library of around 100
-standard components.
+The present version supports both continuous and pulsed source instru-
+ments, and includes a library of standard
+components with in total around 90 components. These enable to simulate all kinds of neutron scattering instruments (diffractometers, triple-axis, reflectometers, time-of-flight, small-angle, back-scattering,...).
 
 The \MCS\ package is written in ANSI-C and is freely available for down-load
 from the \MCS\ web-page~\cite{mcstas_webpage}. The package is actively
-being developed and supported by Ris\o\ National Laboratory and ILL. 
+being developed and supported by Ris\o\ National Laboratory and the Institut Laue Langevin. 
 The system is well tested and
-is supplied with several examples and with an extensive documentation.
+is supplied with several examples and with an extensive documentation,
+including a separate component manual.
 
 
 \section{Background}
 
 The \MCS\ project is the main part of a major effort in Monte Carlo simulations
-for neutron scattering at Ris\o\ National Laboratory and at the ILL. 
-Simulation tools were urgently needed,
+for neutron scattering at Ris\o\ National Laboratory. Simulation tools were urgently needed,
 not only to better utilize existing instruments
 ({\em e.g.} RITA-1 and RITA-2~\cite{cjp_73_697,pb_241_50,pb_283_343}), 
 but also to plan completely new instruments for new sources 
-({\em e.g.} European
-Spallation Source, ESS~\cite{ess_webpage}). Writing programs in C or Fortran for
+({\em e.g.} the Spallation Neutron Source, SNS~\cite{sns_webpage} 
+and the European Spallation Source, ESS~\cite{ess_webpage}). 
+Writing programs in C or Fortran for
 each of the different cases involves a huge effort, with debugging presenting
 particularly difficult problems. A higher level tool specially designed
-for the needs of simulating neutron instruments was needed. As there was
-no existing simulation software that would fulfill these needs, the \MCS\ 
+for the needs of simulating neutron instruments is needed. As there was
+no existing simulation software that would fulfill our needs, the \MCS\ 
 project was initiated.
-
+In addition, the ILL required an efficient and general simulation
+package in order to achieve renewal of its instruments and guides. 
+A significant contribution to both the component library and the \MCS\ 
+kernel itself was developed at the ILL and included in the package, in 
+agreement with the original \MCS\ authors.
 
 \subsection{The goals of \MCS}
 \label{s:goals}
 
-The \MCS\ project had initially four main objectives that determined 
-the design of the \MCS\ software. These objectives, still underlying
-the \MCS\ project, are:
+Initially, the \MCS\ project had four main objectives that determined the design
+of the \MCS\ software.
 
 \paragraph{Correctness.}
 It is essential to minimize the potential for bugs in computer
@@ -60,7 +60,7 @@ produce bad-looking output or may even crash. This is a nuisance, but at
 least you know that something is wrong. However, if a simulation
 contains bugs it produces wrong results, and unless the results are far
 off, you may not know about it! Complex simulations involve hundreds or
-even thousands of lines of formulae, and ``to err is human''. Thus the
+even thousands of lines of formulae, making debugging a major issue. Thus the
 system should be designed from the start to help minimize the potential
 for bugs to be introduced in the first place, and provide good tools for
 testing to maximize the chances of finding existing bugs.
@@ -70,7 +70,7 @@ When you commit yourself to using a tool for an important project, you
 need to know if the tool will satisfy not only your present, but also
 your future requirements. The tool must not have fundamental limitations that
 restrict its potential usage. Thus the \MCS\ systems needs to be
-flexible enough to simulate different kinds of instruments (triple-axis,
+flexible enough to simulate different kinds of instruments (e.g.\ triple-axis,
 time-of-flight and possible hybrids) as well as many different kind of
 optical components, and it must also be extensible so that future, as
 yet unforeseen, needs can be satisfied.
@@ -104,16 +104,15 @@ In realizing the design of \MCS, the task was
 separated into four conceptual layers:
 \begin{enumerate}
 \item Modeling the physical processes of neutron scattering, \textit{i.e}.\ 
-  the calculation of the fate of a ray of neutrons that passes through the
-  individual components of the instrument (absorption, scattering 
-  off a crystal, etc.)
+  the calculation of the fate of a neutron that passes through the
+  individual components of the instrument (absorption, scattering at a
+  particular angle, etc.)
 \item Modeling of the overall instrument geometry, mainly consisting
   of the type and position of the individual components.
 \item Accurate calculation, using Monte Carlo techniques, of
-  instrument properties such as resolution function, or results of
-  a complete virtual experiment, from the result of
+  instrument properties such as resolution function from the result of
   ray-tracing of a large number of neutrons. This includes estimating
-  the accuracy of the calculations.
+  the accuracy of the calculation.
 \item Presentation of the calculations, graphical or otherwise.
 \end{enumerate}
 
@@ -125,8 +124,9 @@ example, one user may merely look at some results prepared by others,
 without worrying about the details of the calculation. Another user
 may simulate a new instrument without having to reinvent the
 code for simulating the individual components in the instrument. A third
-user may write an intricate simulation of a complex component such as
-a phase space transformer, and expect other users to easily
+user may write an intricate simulation of a complex component,
+e.g.\ a detailed description of a rotating velocity selector, 
+and expect other users to easily
 benefit from his/her work, and so on. \MCS\ attempts to make it
 possible to work at any combination of layers in isolation by separating
 the layers as much as possible in the design of the system and in
@@ -154,8 +154,7 @@ the user/programmer. \textit{Correctness} is improved by having a well-tested
 compiler generate code that would otherwise need to be specially written
 and debugged by the user for every instrument or component. \textit{Efficiency}
 is also improved by letting the compiler optimize the generated code in
-ways that would be time-consuming or difficult for humans to do. 
-Furthermore, the
+ways that would be time-consuming or difficult for humans to do. Furthermore, the
 compiler can generate several different simulations from the same
 specification, for example to optimize the simulations in different
 ways, to generate a simulation that graphically displays neutron
@@ -169,10 +168,10 @@ monochromator was used instead of a flat one'', ``what if the sample was
 offset 2~mm from the center of the axis'' and so on are easy to answer. Within
 minutes the instrument definition can be modified and a
 new simulation program generated. It also makes it simple to debug new
-components. For instance for each components in the \MCS\ release, 
-a test instrument definition is written containing a neutron source, 
-the component to be tested, and whatever
-detectors are useful, in order to test the component thoroughly.
+components. A test instrument definition may be written
+containing a neutron source, the component to be tested, and whatever
+detectors are useful, and the component can be thoroughly tested before
+being used in a complex simulation with many different components.
 
 The \MCS\ system is based on ANSI-C, making it both efficient and
 portable. The meta-language allows the user to embed arbitrary C code in
@@ -182,25 +181,21 @@ power of the C language is available if needed.
 
 \section{Overview}
 
-The \MCS\ system consists of the following major parts:
+This \MCS\ Component Manual consists of the following major parts:
 \begin{itemize}
-\item The \MCS\ meta-language, which is described in the system manual
-  and on the \MCS\ web-page~\cite{mcstas_webpage}. 
-\item The \MCS\ component library, which contains a collection of
-  well-tested beam components that can be used in simulations.
-  The \MCS\ component library is documented in this manual, chapters xx-yy.
-\item A collection of example instrument definitions, which are described in
-  chapter~\ref{s:instrument}.
-\item A number of front-end programs, which are used to run the
-  simulations and to aid in the data collection and analysis of the
-  results. These user interfaces are described in the system manual
-  and on the \MCS\ web-page~\cite{mcstas_webpage}. 
+\item A short list of new features introduced in this \MCS\ release
+  appears in chapter~\ref{c:changes}
+\item A list of available components from the library in chapter~\ref{c:components}, sorted by categories. 
+\item A list of example instruments from the library in chapter~\ref{c:instr_examples}. 
+\item The \MCS\ library functions and definitions
+  that aid in the writing of simulations and components are descripbed in
+  appendix~\ref{c:kernelcalls}.    
 \end{itemize}
 
 An explanation of \MCS\ terminology can be
 found in appendix~\ref{s:terminology}, and a list of library calls 
 that may be used in
-component definitions appears in appendix~\ref{c:kernelcalls}.
+component definitions appears in appendix~\ref{c:kernelcalls} of the Manual.
 
 Plans for future extensions are presented 
 on the \MCS\ web-page~\cite{mcstas_webpage}.
