--- a/trunk/preface.tex
+++ b/trunk/preface.tex
@@ -41,3 +41,22 @@ contact the authors at \verb+mcstas@risoe.dk+
 or consult the \MCS\ WWW home page~\cite{mcstas_webpage}.
 
 If you {\bf appreciate} this software, please subscribe to the \verb+neutron-mc@risoe.dk+ email list, send us a smiley message, and contribute to the package.
+
+\section*{\MCS\ \version\ contributors}
+Several people outside the core developer team have been contributing
+to \MCS\ \version:
+\begin{itemize}
+\item{Dickon Champion and Stuart Ansell, ISIS:
+    \verb+ISIS_moderator+. Dickon also contributed his model of the
+    ISIS HET instrument plus a test instrument for the moderator
+    component. Dickon also assisted in various debugging.}
+\item{Uwe Filges, PSI: \verb+Guide_tapering+ and a model of the PSI
+    FOCUS instrument}
+\item{Ross Stewart, ILL: New \verb+Guide_curved+}
+\item{Chris Ling, ILL: ILL D9 instrument}
+\item{Lise Arleth, RIS\O: Helped the developer team regarding the new
+  \verb+Sans_spheres+ component}
+\end{itemize}
+Thank you guys! This is what \MCS\ is all about!
+
+
