--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -130,7 +130,8 @@ those shown in figures \ref{fig:mcdisp_PGPLOT}-\ref{fig:mcdisp_Matlab}.
 \end{figure}
 
 For a slightly longer gentle introduction to McStas, see the McStas
-tutorial (available from~\cite{mcstas_webpage}). For more technical
+tutorial (available from~\cite{mcstas_webpage}), and as of version
+\version\ built into the \verb+mcgui+ help menu. For more technical
 details, read on from section~\ref{s:running}
 
 \subsection{New releases of \MCS}
