--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -93,6 +93,7 @@
 %\include{future} % now in changes
 
 \appendix
+\include{tutorial}
 \include{kernelcalls}
 %\include{compcode}
 %\include{instcode}
