Final documentation updates, TODO, note for windows users regarding spaces in filenames.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@49 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/changes.tex
+++ b/trunk/changes.tex
@@ -12,6 +12,11 @@ upward compatibility  exists for all changes, and thus all previous components
 and  instruments should work as before. Changes are labelled as 1.7 or 1.8 to 
 indicate in which \MCS\ version they appeared.
 
+Important note for Windows users: It is a known problem that some of
+the \MCS\ tools do not support filenames / directories with spaces.
+We are working on a more general approach to this problem, which will
+hopefully be solved in the next release.
+
 \section{General}
 \label{s:new-features:general}
 As of \MCS\ version \version\, the license covering the \MCS\ package
