--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -7,6 +7,11 @@ to Chapter \ref{s:install} for installation instructions. In case of
 problems regarding installation or usage, the McStas mailing
 list~\cite{mcstas_webpage} or the authors should be contacted.
 
+Important note for Windows users: It is a known problem that some of
+the \MCS\ tools do not support filenames / directories with spaces.
+We are working on a more general approach to this problem, which will
+hopefully be solved in the next release.
+
 To use \MCS, an instrument
 definition file describing the instrument to be simulated must be
 written. Alternatively, an example instrument file can be obtained
