Added name of the library files in the Appendix
git-svn-id: https://svn.mccode.org/svn/McStasTeX@53 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -34,7 +34,7 @@ The library embedding is done only once for all components (like the
 
 Here, we present a short list of both each of the library contents and the run-time features.
 
-\section{Run-time calls and functions}
+\section{Run-time calls and functions (\texttt{mcstas-r})}
 \label{s:calls:run-time}
 \index{Library!Run-time|textbf}
 \index{Library!mcstas-r|see{Library/Run-time}}
@@ -254,7 +254,7 @@ resulting Coord structure.
   in meters. This function is useful to target at a guide entry window.
 \end{itemize}
 
-\section{Reading a data file into a vector/matrix (Table input)}
+\section{Reading a data file into a vector/matrix (Table input, \texttt{read\_table-lib})}
 \index{Library!read\_table-lib (Read\_Table)|textbf}
 The \verb+read_table-lib+ provides functionalities for reading text (and binary) data files. To use this library, add a \verb+%include "read_table-lib"+ in your component definition DECLARE or SHARE section. Available functions are:
 
