Correct _ chars in tex
git-svn-id: https://svn.mccode.org/svn/McStasTeX@55 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -478,7 +478,7 @@ When choosing the HTML format, the simulation results are save as a web page, wh
       \texttt{--format={\it FORMAT}}
         & This option sets the file format for result simulation and data files. \\
       \hline
-      \texttt{--format_data={\it FORMAT}}
+      \texttt{--format\_data={\it FORMAT}}
         & This option sets the file format for result data files from monitors. This enables to have simulation files in one format (e.g. HTML), and monitor files in an other format (e.g. VRML).\\
       \hline
       \texttt{{\it param}{\texttt =}{\it value}}
@@ -508,7 +508,7 @@ When choosing the HTML format, the simulation results are save as a web page, wh
       \texttt{IDL\_binary} & & IDL format with external binary files (may be used with -d option). Also toggles -a option. \\
       \texttt{XML} & .xml & XML/NeXus format (may be used with -f and -d options). \\
       \texttt{HTML} & .html & HTML format (generates a web page, may be used with -f and -d options). Data files are saved as VRML objects. \\
-      \texttt{VRML} & .wrl & Virtual Reality file format for data files. Simulation files are not saved properly, and the HTML format should be used preferably.
+      \texttt{VRML} & .wrl & Virtual Reality file format for data files. Simulation files are not saved properly, and the HTML format should be used preferably. \\
       \texttt{Tripoli} &  & Tripoli 4 neutron events file format. Use \verb+Tripoli_input+/\verb+Tripoli_output+ components. \\
       \texttt{Vitess} &  & Vitess neutron events file format. Use \verb+Vitess_input+/\verb+Vitess_output+ components. \\
       \hline
